--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
       <ul class="vidchaNav">
         <li data-start="0">0-30 Timeline</li>
         <li data-start="30.0">30-60 Timeline</li>
-        <li data-start="50.0">60-70 Timeline</li>
-        <li data-start="70.0">70-80 Timeline</li>
-        <li data-start="80.0">80-100 Timeline</li>
-        <li data-start="100.0">100-130 Timeline</li>
-        <li data-start="130.0"">130-End Timeline</li>
+        <li data-start="60.0">60-80 Timeline</li>
+        <li data-start="80.0">80-90 Timeline</li>
+        <li data-start="90.0">90-100 Timeline</li>
+        <li data-start="100.0">100-110 Timeline</li>
+        <li data-start="110.0">110-134 Timeline</li>
+        <li data-start="130.0">
       </ul>
   </section>
 
