--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
   <!-- chapter navigation / set start time in seconds -->
   <section>
       <ul class="vidchaNav">
-        <li data-start="0">0-30 Timeline</li>
+         <li data-start="0">Intro</li>
         <li data-start="30.0">30-60 Timeline</li>
         <li data-start="60.0">60-80 Timeline</li>
         <li data-start="80.0">80-90 Timeline</li>
         <li data-start="90.0">90-100 Timeline</li>
-        <li data-start="100.0">100-110 Timeline</li>
-        <li data-start="110.0">110-134 Timeline</li>
-        <li data-start="130.0">
+        <li data-start="100.0">100-134 Timeline</li>
+        <li data-start="133">Replay</li>
       </ul>
   </section>
 
